--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,6 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<h1>Home</h1>
+<%if user_signed_in?%>
+	<%= link_to 'Sign Out', '/users/sign_out', method: :delete %>
+<%else%>
+	<%= link_to 'Sign In', '/users/sign_in' %>
+<%end%>
