--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,5 +2,5 @@
 <%if user_signed_in?%>
 	<%= link_to 'Sign Out', '/users/sign_out', method: :delete %>
 <%else%>
-	<%= link_to 'Sign In', '/users/sign_in' %>
+	<%= link_to 'Sign In', '/users/sign_in' %> or <%= link_to "Sign in with GitHub", user_github_omniauth_authorize_path, method: :post %>
 <%end%>
